src/styles/blocks/_tree-output.scss
.tree-output__output {
  width: 100%;
  height: 100%;
  display: block;
  margin: 0;
  padding: var(--tg-spacing-3);
  border-radius: var(--tg-rounded-md);
  border: 1px solid var(--tg-primary-border-subtle);
  background-color: var(--tg-primary-bg-subtle);
  font-family: var(--tg-font-family-mono);
  font-size: var(--tg-font-size-base);
  font-weight: 400;
  line-height: var(--tg-line-height-base);
  resize: none;

  &:focus {
    outline: none;
    border: 1px solid var(--tg-primary-border);
  }
}

